--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0",
     "react-router-dom": "^7.4.0",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
