--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
+    "formik": "^2.4.6",
     "lucide-react": "^0.483.0",
     "moment": "^2.30.1",
     "notistack": "^3.0.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0",
     "react-router-dom": "^7.4.0",
+    "sweetalert2": "^11.17.2",
     "swiper": "^11.2.6",
-    "tailwindcss": "^4.0.15"
+    "tailwindcss": "^4.0.15",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
